--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linearLayout"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,7 +15,7 @@
         android:layout_height="0dp"
         android:layout_weight="7"
         android:src="@drawable/ic_launcher_background"
-
+        android:scaleType="fitXY"
         app:zoomage_restrictBounds="true"
         app:zoomage_animateOnReset="true"
         app:zoomage_autoResetMode="NEVER"
@@ -25,6 +26,11 @@
         app:zoomage_maxScale="8"
         app:zoomage_doubleTapToZoom="false"
         />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
