--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="task_text_1">#FFEF66</color>
+    <color name="next_button">#00FF19</color>
+    <color name="previous_button">#FF0000</color>
 </resources>
